[tool.poetry]
name = "robotq"
version = "0.1.0"
description = ""
authors = ["maly <swampinhabitant@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["classic-control"], version = "^1.0.0"}
matplotlib = "^3.9.3"
scipy = "^1.14.1"
jupyter = "^1.1.1"
tqdm = "^4.67.1"
imageio = {extras = ["ffmpeg"], version = "^2.36.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
